assets/css/master.styl
base-font-size = 16px

@import '_settings'
@import 'jeet'

normalize-css()
base()

*, *:before, *:after
  box-sizing: border-box
  
html, body
  height: 100%

body
  display: table
  width: 100%
  text-size-adjust: none
  word-break: break-word
  line-height: 1.5
  font-size: 16px

.page-row
  display: table-row
  height: 1px
 
.page-row-expanded { height: 100%; }

img
  max-width: 100%
  vertical-align: bottom
  height: auto
  
.langs
  background: #EAEAEA
  border-bottom: 1px solid white
  padding: 0.25em 1em
  text-align: right
  a
    margin-right: 0.5em
    text-decoration: none
    color: #777
    font-size: 0.9em
    &.active
      color: #F7A11A
      
.navbar
  position: relative
  
.home-icon
  display: none
  +above(600px)
    display: inline-block
    vertical-align: middle
.home-text
  +above(600px)
    display: none
  
.menu-list
  position: absolute
  z-index: 1
  top: 100%
  width: 100%
  background: #F25822
  box-shadow: 0 5px 8px transparentify(darken(@background, 30%))
  display: none
  a
    text-align: center
    display: block
    text-decoration: none
    margin: 1em
    font-size: 1.5em
    font-weight: 700
    color: white
  +above(600px)
    background: #F7A11A
    top: 0
    right: 0
    box-shadow: none
    display: block
    height: 4.5em
    width: auto
    padding: 1em 0
    border-radius: 2px 0 0 2px
    box-shadow: -2px 0 3px rgba(navy, 30%)
    a
      position: relative
      top: 0
      bottom: 0
      display: inline-block
      height: 100%
      vertical-align: middle
      font-size: 1em
      font-weight: 500
      line-height: 2.5em
      padding: 0 1em
      margin: 0
      border-right: 0.15em solid lighten(#F7A11A, 20%)
      &.last
        border: none
    
#menu:target .menu-list
  display: block
      
.logo
  padding: 0.25em 2em
  display: inline-block
  vertical-align: middle
  
.menu-btn
  position: absolute
  top: 0
  bottom: 0
  right: 0
  background: #F7A11A
  padding: 0.25em 1.5em
  height: 100%
  display: inline-block
  vertical-align: middle
  img
    position: relative
    top: 20%
  &.close
    display: none
  #menu:target &.close
    display: inline-block
  #menu:target &.open
    display: none

.hero .wrapper
  position: relative

.hero-image
  display: block
  width: 100%
  margin: 0 auto
  
.hero-text
  position: absolute
  text-align: center
  width: 100%
  top: 45%
  color: white
  text-shadow: 0 2px 3px #173239
  text-transform: uppercase
  font-weight: 900
  height: 3em
  margin-top: -1.5em
  .line-1
    font-size: 1em
  .line-2
    font-size: 0.5em
  .line-3
    font-size: 0.75em

.article-section
  .readmore-article
    display: none
  a
    text-decoration: none
    color: #777
    display: block
    padding: 1em 2em
    margin: 0
    border-bottom: 4px solid #EAEAEA
    border-top: 2px solid #FFFFFF
    &.odd
      background: #F5F4F2
    &.even
      background: #FCFBF9
    &.article-item
      padding: 2em 2em
  h2
    padding: 1em 2em
    margin: 0
    color: white
    font-size: 1em
  h3
    font-size: 1em
    margin: 0
    span
      font-weight: normal
  &.recommended h2
    background: #FF6600
  &.pregnancy
    h2
      background: #00AFCA
    .readmore
      color: #00AFCA
  &.baby
    h2
      background: #6ABE28
    .readmore
      color: #6ABE28
  &.mama-to-mama
    h2
      background: #D91F2A
    .readmore
      color: #D91F2A
  .page-category
    font-size: 0.9em
    text-transform: uppercase
    &.pregnancy
      color: #00AFCA
    &.baby
      color: #6ABE28
    &.mama-to-mama
      color: #D91F2A
  .readmore
    border-bottom: 4px solid #EAEAEA
    font-weight: 600
  .readmore img
    vertical-align: middle
    margin-top: -4px
    
.show-page-category
  .wrapper
    padding: 0.5em 2em
    color: white
    .category-page &
      +above(600px)
        padding: 0.5em 0
  &.baby
    background: #6ABE28
  &.pregnancy
    background: #00AFCA
  &.mama-to-mama
    background: #D91F2A
    
.show-page-heading
.show-page-intro
  margin-bottom: 0
.show-page-intro
.show-page-date
  margin-top: 0

.show-page-heading
  font-size: 1.5em
.show-page-intro
  font-size: 1.8em
  font-weight: 400
  margin-bottom: 0.2em
.show-page-date
  font-size: 1em
  font-weight: 400
  +above(600px)
    margin-bottom: 0
  
.show-page-info
.show-page-content
  padding: 0.5em 2em
.show-page-content
  color: #777
  font-size: 1.1em
  border-bottom: 4px solid #EAEAEA
  p
    margin: 1.5em 0
    
.show-category-title
  font-size: 1em
  padding: 1em 0
  margin: 0
  color: white
  &.baby
    background: #6ABE28
  &.pregnancy
    background: #00AFCA
  &.mama-to-mama
    background: #D91F2A
    
.show-category-article
  +above(600px)
    col(1/3, cycle: 3)
    box-shadow: 0 2px 3px 1px rgba(navy, 10%)
    margin-top: 2em
    
.show-category-articles
  a
    display: block
    color: #777
    text-decoration: none
    padding: 1em 2em
    border-bottom: 4px solid #EAEAEA
    border-top: 2px solid #FFFFFF
    h2
      margin-bottom: 0
      font-weight: 500
      font-size: 1.25em
    h3
      margin-top: 0.25em
      margin-bottom: 0.25em
      font-weight: 400
      font-size: 1em
    h4
      margin-top: 0.1em
      font-weight: 400
      font-size: 0.9em
    &.odd
      background: #F5F4F2
    &.even
      background: #FCFBF9

.footer
  background: #F7A11A
  color: white
  text-align: center
  padding: 2em 0
  
.category-icon
  display: none
  +above(600px)
    display: block
    height: 6em
    width: 6em
    border-radius: 50%
    position: absolute
    top: -1.5em
    left: 1em
    .mama-to-mama &
      background: #D91F2A
    .baby &
      background: #6ABE28
    .pregnancy &
      background: #00AFCA
    img
      position: absolute
      max-width: 50%
      height: auto
      top: 0
      bottom: 0
      left: 0
      right: 0
      margin: auto
  
.wrapper
  center(940px)
  &.show-page
    +above(600px)
      padding: 2em 0 5em 0
    .content-section
      +above(600px)
        col(3/5)
  
.article-page
  .logo
    +above(600px)
      margin-left: 2em
  .article-section.recommended
    display: none
    +above(600px)
      display: block
      col(2/5)
    
.show-page-links
  +above(600px)
    margin-top: 1.8em
    box-shadow: 0 2px 8px 1px rgba(navy, 20%)
    
.langs
  +above(600px)
    padding: 1em 0
    display: table-header-group
    .wrapper
      padding: 0.5em 0
    a
      font-weight: 600
      font-size: 0.9em
      margin: 0.5em 0.25em
      
.recommended-category-icon
  display: none

.nav-outer
  +above(600px)
    background: #0099B1
    padding: 1em 0

.home-page    
  .nav-outer
    +above(600px)
      z-index: 5
      position: absolute
      top: 2em
      width: 100%
      background: transparent
    
.logo
  +above(600px)
    padding: 0.5em 2em
    background: #fff
    
.header
  +above(600px)
    display: table
    width: 100%
    
.hero
  +above(600px)
    background: #01ACC6
    
.hero-text
  +above(600px)
    font-size: 2.5em
    top: 60%
    
.menu-btn
  +above(600px)
    display: none
    
.article-section
  position: relative
  
.recommended-readmore
  display: none
  +above(600px)
    display: inline-block
    vertical-align: middle
    margin-right: 5px

.home-page
  .category-articles .article-content
  .recommended .article-content
    display: none
  +above(600px)
    .category-articles .article-content
      display: block
      margin-bottom: 2em
    .recommended .article-content
      display: block
    .article-section
      .readmore
        display: none
      &.baby
        border-left: 4px solid #6ABE28
        .readmore-article
          background: #6ABE28
      &.pregnancy
        border-left: 4px solid #00AFCA
        .readmore-article
          background: #00AFCA
      &.mama-to-mama
        border-left: 4px solid #D91F2A
        .readmore-article
          background: #D91F2A
    .article-section a
      background: none
      border: none
    .category-articles
      span(4/7)
      shift(-3/7, 'span')
      margin-top: 2em
      margin-bottom: 2em
      .readmore-article
        display: inline-block
        padding: 0.5em 2em
        color: white
        font-size: 1em
        font-weight: bold
        border-radius: 9999px
        
      .article-section
        margin-top: 2em
        margin-bottom: 2em
        h2
          width: 80%
          padding-left: 10em
          margin-bottom: 1em
        h3, h3 span
          font-weight: bold
        h3
          font-size: 1.25em
          margin-bottom: 1em
        a
          padding: 1em 2em
        .inner-article
          border-bottom: 4px solid #eee
          padding: 2em 0
          padding-top: 0
          &.last
            padding: 0
            border: none
.article-section.recommended
  .home-page &
    +above(600px)
      span(3/7)
      shift(4/7, 'span')
      margin-top: 4em
  .article-page &
      +above(600px)
        col(2/5)
  .article-page &, .home-page &
    +above(600px)
      .article-item
        position: relative
        display: block
        padding: 1em
        .article-content
          group()
          .content
            width: 70%
            float: left
        .page-category
          display: none
        .recommended-category-label-desktop
          text-align: center
          text-transform: uppercase
          float: right
          position: relative
          top: 1em
          font-size: 0.8em
        .recommended-category-icon-desktop
          display: inline-block
          height: 5em
          width: 5em
          border-radius: 50%
          border: 4px solid #ccc
          position: relative
          img
            position: absolute
            max-width: 50%
            height: auto
            top: 0
            bottom: 0
            left: 0
            right: 0
            margin: auto
        h3, span
          font-weight: bold
        h3
          font-size: 1.15em
          
.article-page
  .logo
    +above(600px)
      margin-left: 2em
  .article-section.recommended
    display: none
    +above(600px)
      display: block
      col(2/5)

